k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iam-agent
  namespace: iam
spec:
  type: ClusterIP
  sessionAffinity: ClientIP
  selector:
    app: iam-agent
  ports:
    - name: http-backend
      port: 80
      targetPort: 8000
      protocol: TCP
